--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
